
*** Added
+ *tetragono*: Add mirror direct sampling which is only used for Gibbs state on square lattice, and maintains the
  symmetry of the Gibbs state.
+ *tetraux*: Add a function =pseudo_inverse_kernel= used to speed up min-SR method via scalapack.
+ *TAT.py*: Add =dtype= and =btype= class member for =Tensor= object, which makes it easier to communicate with numpy.
*** Changed
+ *tetragono*: Use the new function =pseudo_inverse_kernel= in =tetraux= to speed up min-SR method which using
  scalapack. Only when compiling tetraux with scalapack, this function will be compiled. Without scalapack support, the
  min-SR method can not run parallelly.
+ *TAT.py*: Change the module alias name convension, =float= and =complex= without bytes specified would be considered
  as double precision now.
*** Deprecated
*** Removed
*** Fixed
+ *tetragono*: Fix a bug when try to save a file with directory name. The previous program only allows to save file into
  the current directory.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.1...v0.3.2][v0.3.2]] - 2022-02-28

*** Added
+ *tetragono*: Add =natural_gradient_by_direct_pseudo_inverse= to calculate natural gradient for sampling lattice. And
  add parameter =use_natural_gradient_by_direct_pseudo_inverse= (default is False), =natural_gradient_r_pinv= and
  =natural_gradient_a_pinv= for high/mid-level API in =gm_run= to use direct pseudo inverse to calculate natural
  gradient.
+ *tetraku*: Add Hamiltonian to another part of density matrix for density matrix of Heisenberg/Hubbard/tJ model. It is
  to ensure the result density is unitary despite of errors introduced by contract and approximation. This is controled
  by a new parameter =side= which is either =1= or =2=, default is =1=, which has the same behavior with before.
*** Changed
+ *TAT.py*: =sqrt= will calculate the square root of absoluate value in tensor elementwisely, instead of square root of
  value itself and return =nan= for negative number.