@@ -1,6 +1,7 @@
 /*
 !/.github
 !/PyTAT
+!/PyScalapack
 !/examples
 !/include
 !/lazy_graph
