@@ -7,6 +7,7 @@
   symmetry of the Gibbs state.
 + *tetraux*: Add a function =pseudo_inverse_kernel= used to speed up min-SR method via scalapack.
 + *TAT.py*: Add =dtype= and =btype= class member for =Tensor= object, which makes it easier to communicate with numpy.
++ *scalapack.py*: Add a python wrapper for scalapack.
 *** Changed
 + *tetragono*: Use the new function =pseudo_inverse_kernel= in =tetraux= to speed up min-SR method which using
   scalapack. Only when compiling tetraux with scalapack, this function will be compiled. Without scalapack support, the
